Display whether image cards were clicked after the game is over

--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -28,3 +28,11 @@
   background-color: black;
   margin: 0;
 }
+
+.image-card.clicked {
+  border-color: red;
+}
+
+.image-card.not-clicked {
+  border-color: limegreen;
+}
