--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: HyliaSerif;
-  src: url("./fonts/HyliaSerifBeta-Regular.otf") format("opentype");
+  src: url("../fonts/HyliaSerifBeta-Regular.otf") format("opentype");
 }
 
 :root {
