--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -4,6 +4,8 @@
   border: 2px solid white;
   border-radius: 7px;
   overflow: hidden;
+  font: inherit;
+  padding: 0;
 }
 
 .image-card .zoom-image {
